--- a/input-pad/APKBUILD
+++ b/input-pad/APKBUILD
@@ -8,7 +8,7 @@ url="https://github.com/fujiwarat/input-pad"
 arch="all"
 license="LGPL-2.1"
 depends="gtk+3.0"
-makedepends="gtk+3.0-dev libxkbfile-dev libxml2-dev"
+makedepends="gtk+3.0-dev libxkbfile-dev libxml2-dev intltool"
 install=""
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://github.com/fujiwarat/input-pad/releases/download/1.0.99.20140916/input-pad-1.0.99.20140916.tar.gz"
