replace enchant with enchant2

--- a/lyx/APKBUILD
+++ b/lyx/APKBUILD
@@ -7,8 +7,8 @@ pkgdesc="WYSIWYM document processor"
 url="https://www.lyx.org"
 arch="all"
 license="GPL-2"
-depends="qt5-qtsvg hunspell aspell enchant mythes"
-makedepends="qt5-qtsvg-dev file-dev hunspell-dev aspell-dev enchant-dev mythes-dev"
+depends="qt5-qtsvg hunspell aspell enchant2 mythes"
+makedepends="qt5-qtsvg-dev file-dev hunspell-dev aspell-dev enchant2-dev mythes-dev"
 install=""
 subpackages="$pkgname-doc $pkgname-lang"
 source="https://ftp.lip6.fr/pub/lyx/stable/2.3.x/lyx-2.3.4.3.tar.gz"
